--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
 		    padding-right: 5px;
 		}
 
-		/* For PrimsJS customization */
+		/* For PrismJS customization */
 		pre[class*="language-"] {
 			font-size: 14px !important;
 			background: #f9f9fa !important;
@@ -40,7 +40,7 @@
 			margin-top: 0.5em;
 			padding: 0.2em;
 			padding-left: 1em;
-			background-color: #cdf1f5;
+			background-color: #E1F1FB;
 			font-weight: bold;
 			color: black;			
 		}
@@ -84,7 +84,7 @@
 	<h1>Prims JS</h1>
 	<p>Only important line which is doing real work is <code class="language-java">return input * 2</code>. Rest every thing is overhead ceremonial code.</p>
 	<div class="filename">MainApp.java</div>
-	<pre class="language-java line-numbers" ><code>package com.readtorakesh.java8.lambda_expression_basics;
+	<pre class="language-java line-numbers"><code>package com.readtorakesh.java8.lambda_expression_basics;
 
 public class MainApp {
 	public static void main(String[] args) {
