updating css samples

--- a/readtorakesh-blog-css.html
+++ b/readtorakesh-blog-css.html
@@ -54,6 +54,9 @@
 	<h1>Prims JS</h1>
 	<p>Only important line which is doing real work is <code class="language-java">return input * 2</code>. Rest every thing is overhead ceremonial code.</p>
 	
+<div class="filename">MainApp.java</div>
+<pre class="language-java line-numbers"><code></code></pre>
+
 	<div class="filename">MainApp.java</div>
 	<pre class="language-java line-numbers"><code>package com.readtorakesh.java8.lambda_expression_basics;
 
